# cmake_multiple_exe

./: CMakeLists.txt  main.cpp
